[SC-16575] Fixed overlapping "right arrow" icon with "x" button;

--- a/src/app/crm/contacts/personal-details/personal-details-dialog/personal-details-dialog.less
+++ b/src/app/crm/contacts/personal-details/personal-details-dialog/personal-details-dialog.less
@@ -38,6 +38,10 @@
         }
     }
 
+    ::ng-deep .mat-tab-header {
+        padding-right: 27px;
+    }
+
     ::ng-deep .mat-tab-label {
         min-width: 100px !important;
     }
@@ -132,11 +136,11 @@
         .field {
             line-height: 30px;
             padding: 10px 0;
-            
+
             &.stripe {
                 &, & .span {
                     white-space: nowrap;
-                }            
+                }
             }
 
             ::ng-deep inplace-edit {
